# geozilla

./: .gitignore  .gitmodules  README.md  geozilla-scheme.drawio  run-back.bat  run-front.bat
geozilla/: geozilla.sln
geozilla-api/geozilla-api/: geozilla-api.csproj
geozilla-api/geozilla-api/Properties/: launchSettings.json
geozilla/geozilla/: Program.cs  geozilla.csproj
geozilla/geozilla-api/: Program.Cors.cs  Program.Endpoints.cs  Program.Injections.cs  Program.Swagger.cs  Program.cs  geozilla-api.csproj  geozilla-api.http
geozilla/geozilla-api/Endpoints/GeneratorGeoJson/: GeneratoGeoJsonApi.cs
geozilla/geozilla-api/Endpoints/GeneratorGeoJson/Requests/: GenerateGeoJsonRequest.cs
geozilla/geozilla-bl/: geozilla-bl.csproj
geozilla/geozilla-bl/Services/Generation/Abstract/: IGeoJsonService.cs
geozilla/geozilla-bl/Services/Generation/Concrete/: GeoJsonService.cs  GeozillaCoreDll.cs
geozilla/geozilla-core/: DllMain.cpp  GeozillaCore.cpp  GeozillaCore.h  Pch.h  ZoneSplitter.cpp  ZoneSplitter.h  geozilla-core.vcxproj  geozilla-core.vcxproj.filters
geozilla/geozilla-core/Dependencies/cesium-native/lib/: Cesium3DTiles.lib  Cesium3DTilesWriter.lib  Cesium3DTilesd.lib  CesiumAsync.lib  CesiumGeometry.lib  CesiumGeometryd.lib  CesiumGeospatial.lib  CesiumGeospatiald.lib  CesiumGltf.lib  CesiumGltfContent.lib  CesiumGltfWriter.lib  CesiumIonClient.lib  CesiumJsonReader.lib  CesiumJsonWriter.lib  CesiumJsonWriterd.lib  CesiumQuantizedMeshTerrain.lib  CesiumUtility.lib  CesiumUtilityd.lib  async++.lib  async++d.lib  (+21 more)
geozilla/geozilla-core/Loader/: GeoModelLoader.cpp
geozilla/geozilla-core/Logger/: ConsoleLogger.h  ILogger.h
geozilla/geozilla-core/source/: CMakeLists.txt  GeozillaCore.cpp  GltfToPointCloudConverter.cpp  GltfToPointCloudConverter.h
geozilla/geozilla-core/source/Loader/: B3dmLoader.cpp  B3dmLoader.h  GeoModelLoader.cpp  GeoModelLoader.h  GeoModelLoaderBase.cpp  GeoModelLoaderBase.h
geozilla/geozilla-core/source/Logger/: ConsoleLogger.cpp
geozilla/geozilla-core/source/ZoneSplitter/: ZoneSplitter.cpp  ZoneSplitter.h
geozilla/geozilla-react/: package-lock.json  package.json
geozilla/geozilla-react/src/: App.tsx  index.css
geozilla/geozilla-react/src/api/: BaseApi.ts  GenerateGeoJsonApi.ts
geozilla/geozilla-react/src/components/: CoordinateInput.tsx  DataSender.tsx  FileUploader.tsx  MapViewer.css  MapViewer.tsx  Visualiser.tsx
geozilla/geozilla-react/src/types/: LatLng.ts
geozilla/gozilla-core/: CMakeLists.txt
geozilla/gozilla-core/source/: CMakeLists.txt  GeozillaCore.cpp
geozilla/gozilla-core/source/Loader/: IGeoModelLoader.h
(+1 files in other folders)
